tests/files/type_checker_tests/should_pass/365.cmdr
//Should type check
a = 1;
b = (1.0,false)[a];
b[a] = 3;
