tests/files/type_checker_tests/should_fail/077.cmdr
//Should fail using uninitialized variable
type a = b;
